--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -8,25 +8,25 @@ permissions:
   contents: read
   packages: write
 
-env:
-  # paths de imágenes en GHCR (siempre en minúsculas)
-  OWNER_LC: ${{ toLower(github.repository_owner) }}
-  REPO_LC:  ${{ toLower(github.event.repository.name) }}
-  BACK_IMG: ghcr.io/${{ toLower(github.repository_owner) }}/${{ toLower(github.event.repository.name) }}-backend
-  FRONT_IMG: ghcr.io/${{ toLower(github.repository_owner) }}/${{ toLower(github.event.repository.name) }}-frontend
-
 jobs:
   build-backend:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Login GHCR
+      # Deriva nombres de imagen en minúsculas
+      - name: Derive image name (backend)
+        run: |
+          owner="${GITHUB_REPOSITORY%/*}"
+          repo="${GITHUB_REPOSITORY#*/}"
+          echo "BACK_IMG=ghcr.io/${owner,,}/${repo,,}-backend" >> $GITHUB_ENV
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push backend
         uses: docker/build-push-action@v6
@@ -43,12 +43,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Login GHCR
+      - name: Derive image name (frontend)
+        run: |
+          owner="${GITHUB_REPOSITORY%/*}"
+          repo="${GITHUB_REPOSITORY#*/}"
+          echo "FRONT_IMG=ghcr.io/${owner,,}/${repo,,}-frontend" >> $GITHUB_ENV
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ github.token }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push frontend (nginx)
         uses: docker/build-push-action@v6
@@ -66,6 +72,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ build-backend, build-frontend ]
     steps:
+      # Deriva ambas rutas de imagen para esta job también
+      - name: Derive image names
+        run: |
+          owner="${GITHUB_REPOSITORY%/*}"
+          repo="${GITHUB_REPOSITORY#*/}"
+          echo "BACK_IMG=ghcr.io/${owner,,}/${repo,,}-backend"  >> $GITHUB_ENV
+          echo "FRONT_IMG=ghcr.io/${owner,,}/${repo,,}-frontend" >> $GITHUB_ENV
+
       - name: Deploy via SSH (Compose pull+up)
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -76,21 +90,15 @@ jobs:
             set -e
             cd ${{ secrets.EC2_PATH }}
 
-            # Login GHCR para poder hacer pull desde la EC2
-            docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" -p "${{ secrets.GHCR_PAT }}"
+            # Login GHCR en la EC2 para poder hacer pull
+            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
 
-            # Escribe las imágenes exactas (por SHA) que debe usar Compose
-            cat > deploy/.env.images <<'EOF'
+            # Fija imágenes exactas por SHA
+            cat > deploy/.env.images <<EOF
             BACKEND_IMAGE=${{ env.BACK_IMG }}:${{ github.sha }}
             FRONTEND_IMAGE=${{ env.FRONT_IMG }}:${{ github.sha }}
             EOF
 
-            # Actualiza código (si tienes repo git en EC2)
-            if [ -d .git ]; then
-              git fetch --all && git reset --hard origin/main || true
-            fi
-
-            # Trae imágenes nuevas y levanta
             docker compose --env-file deploy/.env --env-file deploy/.env.images pull
             docker compose --env-file deploy/.env --env-file deploy/.env.images up -d --remove-orphans
             docker system prune -f
