--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -88,32 +88,49 @@ jobs:
           script: |
             set -Eeuo pipefail
 
-            # 1) Ir al path de deploy y asegurar repo
-            mkdir -p "${{ secrets.EC2_PATH }}"
-            cd "${{ secrets.EC2_PATH }}"
+            REPO_URL="https://github.com/${{ github.repository }}.git"  # si es PRIVADO, ver nota abajo
+            TARGET_DIR="${{ secrets.EC2_PATH }}"
+
+            mkdir -p "$TARGET_DIR"
+            cd "$TARGET_DIR"
+
             if [ -d .git ]; then
               git fetch --all || true
               git reset --hard origin/main || true
+            else
+              git clone --depth 1 "$REPO_URL" .   # <-- deja el repo si no existe
             fi
 
-            # 2) Asegurar carpeta deploy/
+            # Asegurar carpeta deploy/
             mkdir -p deploy
 
-            # 3) Login a GHCR (warning del store es normal)
+            # Login GHCR
             echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
 
-            # 4) Escribir las imágenes exactas por SHA (sin espacios al inicio)
+            # Escribir imágenes exactas por SHA (sin espacios)
             printf "BACKEND_IMAGE=%s:%s\nFRONTEND_IMAGE=%s:%s\n" \
-              "${{ env.BACK_IMG }}" "${{ github.sha }}" \
-              "${{ env.FRONT_IMG }}" "${{ github.sha }}" \
+              "ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/${GITHUB_REPOSITORY#*/,,}-backend" "${GITHUB_SHA}" \
+              "ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/${GITHUB_REPOSITORY#*/,,}-frontend" "${GITHUB_SHA}" \
               | tee deploy/.env.images > /dev/null
 
-            # 5) Usar deploy/.env si existe
+            # (Opcional) usar deploy/.env si existe
             EF=""
             [ -f deploy/.env ] && EF="--env-file deploy/.env"
 
-            docker compose $EF --env-file deploy/.env.images pull
-            docker compose $EF --env-file deploy/.env.images up -d --remove-orphans
+            # Ejecutar compose apuntando explícitamente al archivo (por si acaso)
+            COMPOSE_FILE="docker-compose.yml"
+            [ -f "$COMPOSE_FILE" ] || COMPOSE_FILE="docker-compose.yaml"
+            [ -f "$COMPOSE_FILE" ] || COMPOSE_FILE="compose.yml"
+            [ -f "$COMPOSE_FILE" ] || COMPOSE_FILE="compose.yaml"
+
+            if [ ! -f "$COMPOSE_FILE" ]; then
+              echo "❌ No se encontró archivo compose en $TARGET_DIR"
+              ls -la
+              exit 14
+            fi
+
+            docker compose -f "$COMPOSE_FILE" $EF --env-file deploy/.env.images pull
+            docker compose -f "$COMPOSE_FILE" $EF --env-file deploy/.env.images up -d --remove-orphans
 
             docker logout ghcr.io || true
             docker system prune -f
