--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   backend:
     image: ${BACKEND_IMAGE}
+    restart: unless-stopped
     ports:
       - "${BACK_HTTP_PORT:-8000}:8000"
     env_file:
@@ -9,6 +10,7 @@ services:
 
   frontend:
     image: ${FRONTEND_IMAGE}
+    restart: unless-stopped
     ports:
       - "${FRONT_HTTP_PORT:-8080}:80"
     depends_on: [backend]
