--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -2,7 +2,13 @@ name: Build & Deploy (EC2 + GHCR)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "andres" ]     # ← ahora también en 'andres'
+  workflow_dispatch:                    # ← trigger manual con input opcional
+    inputs:
+      branch:
+        description: 'Branch to deploy (default: ref name)'
+        required: false
+        default: ''
 
 permissions:
   contents: read
@@ -13,22 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Derive image name (backend)
         run: |
           owner="${GITHUB_REPOSITORY%/*}"
           repo="${GITHUB_REPOSITORY#*/}"
           echo "BACK_IMG=ghcr.io/${owner,,}/${repo,,}-backend" >> $GITHUB_ENV
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-
-      - name: Build & Push backend
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           file: deploy/backend.Dockerfile
@@ -41,22 +42,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Derive image name (frontend)
         run: |
           owner="${GITHUB_REPOSITORY%/*}"
           repo="${GITHUB_REPOSITORY#*/}"
           echo "FRONT_IMG=ghcr.io/${owner,,}/${repo,,}-frontend" >> $GITHUB_ENV
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
-
-      - name: Build & Push frontend (nginx)
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           file: deploy/frontend.Dockerfile
@@ -78,7 +74,7 @@ jobs:
           echo "BACK_IMG=ghcr.io/${owner,,}/${repo,,}-backend"  >> $GITHUB_ENV
           echo "FRONT_IMG=ghcr.io/${owner,,}/${repo,,}-frontend" >> $GITHUB_ENV
 
-      - name: Deploy via SSH (Compose pull+up)
+      - name: Deploy via SSH (Compose pull+up) for selected branch
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -88,8 +84,9 @@ jobs:
             set -Eeuo pipefail
 
             TARGET_DIR="${{ secrets.EC2_PATH }}"
+            BRANCH="${{ inputs.branch != '' && inputs.branch || github.ref_name }}"
 
-            # Si tu repo es privado, define GH_READ_TOKEN; si es público, no hace falta
+            # Repo URL (con token si es privado)
             if [ -n "${{ secrets.GH_READ_TOKEN }}" ]; then
               REPO_URL="https://x-access-token:${{ secrets.GH_READ_TOKEN }}@github.com/${{ github.repository }}.git"
             else
@@ -99,67 +96,53 @@ jobs:
             mkdir -p "$TARGET_DIR"
             cd "$TARGET_DIR"
 
-            # Sincroniza repo
+            # Sync repo exactamente a la rama solicitada
             if git rev-parse --is-inside-work-tree >/dev/null 2>&1; then
-              git fetch --all || true
-              git reset --hard origin/main || true
+              git fetch --depth 1 origin "$BRANCH" || true
+              git checkout -B "$BRANCH" "origin/$BRANCH" || git checkout "$BRANCH"
+              git reset --hard "origin/$BRANCH" || true
             else
               if [ -z "$(ls -A .)" ]; then
-                git clone --depth 1 "$REPO_URL" .
+                git clone --depth 1 --branch "$BRANCH" "$REPO_URL" .
               else
                 git init
                 git remote remove origin 2>/dev/null || true
                 git remote add origin "$REPO_URL"
-                git fetch --depth 1 origin main
-                git reset --hard origin/main
+                git fetch --depth 1 origin "$BRANCH"
+                git checkout -B "$BRANCH" "origin/$BRANCH"
               fi
             fi
 
             # Asegura deploy/
             mkdir -p deploy
 
-            # (1) Ambientación de puertos para evitar choque con :80
-            # Si :80 está ocupado (nginx u otro), usamos 8080; si no, usamos 80.
+            # Puertos (mantiene 80 si está libre, si no 8080)
             FRONT_PORT=80
-            if ss -ltn '( sport = :80 )' | grep -q ':80'; then
-              FRONT_PORT=8080
-            fi
+            if ss -ltn '( sport = :80 )' | grep -q ':80'; then FRONT_PORT=8080; fi
+            { echo "FRONT_HTTP_PORT=${FRONT_PORT}"; echo "BACK_HTTP_PORT=8000"; } > deploy/.env
 
-            touch deploy/.env
-            if grep -q '^FRONT_HTTP_PORT=' deploy/.env; then
-              sed -i "s/^FRONT_HTTP_PORT=.*/FRONT_HTTP_PORT=${FRONT_PORT}/" deploy/.env
-            else
-              echo "FRONT_HTTP_PORT=${FRONT_PORT}" >> deploy/.env
-            fi
-            if ! grep -q '^BACK_HTTP_PORT=' deploy/.env; then
-              echo "BACK_HTTP_PORT=8000" >> deploy/.env
-            fi
-
-            # (2) Login GHCR para pull
+            # Login GHCR
             echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ secrets.GHCR_USERNAME }}" --password-stdin
 
-            # (3) Escribe .env.images
+            # Imágenes de este commit (sha del workflow)
             printf "BACKEND_IMAGE=%s:%s\nFRONTEND_IMAGE=%s:%s\n" \
               "${{ env.BACK_IMG }}" "${{ github.sha }}" \
               "${{ env.FRONT_IMG }}" "${{ github.sha }}" \
               | tee deploy/.env.images > /dev/null
 
-            # (4) Detecta compose
-            EF=""
-            [ -f deploy/.env ] && EF="--env-file deploy/.env"
+            # Compose file
+            EF="--env-file deploy/.env"
             COMPOSE_FILE=""
             for f in docker-compose.yml docker-compose.yaml compose.yml compose.yaml; do
               [ -f "$f" ] && COMPOSE_FILE="$f" && break
             done
-            if [ -z "$COMPOSE_FILE" ]; then
-              echo "❌ No se encontró archivo compose en $TARGET_DIR"
-              ls -la
-              exit 14
-            fi
+            [ -n "$COMPOSE_FILE" ] || { echo "❌ No compose file"; exit 14; }
 
-            # (5) Pull + Up
+            # Pull + Up de esa rama (con imágenes de ese commit)
             docker compose -f "$COMPOSE_FILE" $EF --env-file deploy/.env.images pull
             docker compose -f "$COMPOSE_FILE" $EF --env-file deploy/.env.images up -d --remove-orphans
 
             docker logout ghcr.io || true
             docker system prune -f
+
+            echo "✓ Deploy de rama $BRANCH con imágenes :${{ github.sha }}"
